public interface IFigura2D {
    double GetArea();
    double GetPerimetro();
}
