public interface IFigura3D {
    double GetVolumen();
    double GetSuperficie();
}
