public interface IPoliedro {
    double GetTotalLongAristas();
}
